# autoshift

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.dockerhub.md  README.md  Readme.md  auto.py  docker-entrypoint.sh  pyproject.toml  query.py  release-please-config.json  requirements.txt
.github/: FUNDING.yml
.github/workflows/: docker-publish.yml  github-clone-count-badge.yml  github-traffic-count-badge.yml  release-please.yml
