[tool.poetry]
name = "autoshift"
version = "2.0.1"
description = "AutoSHIFt: Automatically redeem Gearbox SHIFt Codes"
authors = [
    "zarmstrong <git@traffid.com>",
    "Fabian Schweinfurth <github@derfabbi.de>",
]
license = "GPLv3"
requires-poetry = ">=2.4,<3.0"

[tool.poetry.dependencies]
python = "^3.9"
APScheduler = "^3.9.1"
apprise = ">=1,<2"
beautifulsoup4 = "^4.11.1"
lxml = ">=6,<7"
requests = "^2.28.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
ipdb = "^0.13.9"
jedi = "^0.18.1"
mypy = "^0.961"
debugpy = "^1.6.0"
pylint = "^2.14.3"
Flask = "^2.1.2"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=2.4,<3.0"]
build-backend = "poetry.core.masonry.api"
